# tnsd_access

./: README.md  pyproject.toml
docs/: api.rst  conf.py  getting_started.rst  index.rst
eeg_access/: __init__.py  utilities.py
eeg_access/getdata/: get_trials.py
tnsd_access/: __init__.py  _base.py  _mixins.py  _utils.py  config.py  utilities.py
tnsd_access/eeg/: __init__.py  _raw.py  _trials.py
tnsd_access/getdata/: __init__.py  get_raw.py  get_trials.py
tnsd_access/mri/: __init__.py  _anatomical.py  _functional.py
tnsd_access/rdm/: __init__.py  _rdm.py
tnsd_access/stimuli/: __init__.py  _stimuli.py
tnsd_access/writedata/: __init__.py  datastore_writer.py
