[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg_access"
version = "0.1.0"
description = "Simple interface for loading versioned EEG epoch datasets from zarr stores"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "zarr",
    "tqdm",
    "boto3",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
docs = ["sphinx>=7", "sphinx-rtd-theme>=2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["eeg_access*"]
